@@ -1,5 +1,15 @@
 2012-05-01  Joseph Myers  <joseph@codesourcery.com>
 
+	* conform/conformtest.pl: Only accept expected constant or
+	optional-constant values with "==".  Parse all "constant" lines in
+	one place.  Parse all "optional-constant" lines in one place.
+	* conform/data/cpio.h-data: Use "==" form on "constant" lines.
+	* conform/data/fmtmsg.h-data: Likewise.
+	* conform/data/netinet/in.h-data: Likewise.
+	* conform/data/tar.h-data: Likewise.
+	* conform/data/limits.h-data: Use "==" form on "constant" and
+	"optional-constant" lines.
+
 	* conform/conformtest.pl: Use -ansi for XPG3, XPG4 and UNIX98.
 	Use -std=c99 for XOPEN2K.
 	(@knownproblems): Remove.
